massive initial porting work